# AETHER

./: .env.example  .pre-commit-config.yaml  AutoDiscoveryModule.ts  CHANGELOG.md  CONTRIBUTING.md  ConsentModule.ts  CoreEventQueue.ts  CoreIdentityManager.ts  CoreSessionManager.ts  EXECUTION_TRACKER.md  EXTRACTION_DEFENSE_AUDIT.md  ExperimentModule.ts  MainAetherSDKClass.ts  Makefile  README.md  RootPackageSDK.json  SDKUtilityFunctions.ts  Web3Module.ts  conftest.py  docker-compose.yml  event-validator.ts  package-lock.json  package.json  pyproject.toml
AWS Deployment/: disaster_recovery.py  (+1 more)
ML Models/aether-ml/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  __init__.py  pyproject.toml  pytest.ini
ML Models/aether-ml/common/src/: __init__.py  base.py  metrics.py  preprocessing.py  validation.py
ML Models/aether-ml/docker/: Dockerfile  docker-compose.yml  prometheus.yml
ML Models/aether-ml/edge/: __init__.py  models.py  runtime.py
ML Models/aether-ml/export/: exporter.py
ML Models/aether-ml/features/: __init__.py  pipeline.py  registry.py  streaming.py
ML Models/aether-ml/monitoring/: __init__.py  alerts.py  monitor.py
ML Models/aether-ml/optimization/: __init__.py  distillation.py  pipeline.py  pruning.py  quantization.py
ML Models/aether-ml/scripts/: dev.sh
ML Models/aether-ml/server/: __init__.py  campaign_attribution.py  journey_prediction.py  models.py
ML Models/aether-ml/serving/src/: api.py  batch_predictor.py  cache.py
ML Models/aether-ml/tests/: conftest.py
ML Models/aether-ml/tests/integration/: test_api.py  test_serving.py
(+522 files in other folders)
