[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-ml"
version = "4.0.0"
description = "Aether ML — Hybrid prediction engine for behavioral analytics"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "tensorflow>=2.15.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "mlflow>=2.11.0",
    "boto3>=1.34.0",
    "pydantic>=2.6.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "tensorflowjs>=4.17.0",
    "networkx>=3.2.0",
    "lifetimes>=0.11.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "jupyter>=1.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
